--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,9 @@
 {
-    "builds": [
-        {
-            "src": "main.py",
-            "use": "@vercel/python"
-        }
-    ],
-    "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "main.py"
-        }
-    ]
+  "version": 2,
+  "builds": [
+    { "src": "api/outline.py", "use": "@vercel/python" }
+  ],
+  "routes": [
+    { "src": "/api/outline", "dest": "api/outline.py" }
+  ]
 }
